objects/Activity.object
<CustomObject>
    <fields>
        <fullName>FinServ__Expectations__c</fullName>
        <description>Notes about client&apos;s expectations</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household associated with the task</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__NextSteps__c</fullName>
        <description>Notes about follow-up activities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Objectives__c</fullName>
        <description>Notes about client&apos;s objectives</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Regarding__c</fullName>
        <description>Nature of interaction with the client</description>
        <label>Regarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Client Retention</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Activity_Completed_Date__c</fullName>
        <description>This Field will Updated automatically through process builder when Status is Completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Annual Review Appointment</fullName>
                </value>
                <value>
                    <fullName>Annual Review Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Admin_Attendees__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Administrator Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Annual_AUA__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Annual Sales or AUA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Areas_where_we_can_be_more_helpful__c</fullName>
        <label>Areas where we can be more helpful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Assigned_To_Charter__c</fullName>
        <description>Activity Assigned to Charter can&apos;t be accessed in reports as a work around, created a Text formula field to access in Report.</description>
        <formula>Owner:User.WT_Charter__c</formula>
        <label>Assigned To Charter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Assigned_to_Line_of_Business__c</fullName>
        <description>Activity Assigned to Line of business is a picklist value which can&apos;t be accessed in reports as a work around, created a Text formula field to access the TEXT value of &quot;Assigned to Line of business&quot;.</description>
        <formula>TEXT( Owner:User.WT_Line_of_Business__c )</formula>
        <label>Assigned to Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bcc__c</fullName>
        <description>Created a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bcc</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Brokers_Dealers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Brokers Dealers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Buisness_Location__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Buisness Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CRA_Reportable__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>CRA Reportable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Call_Duration__c</fullName>
        <defaultValue>&quot;30 minutes&quot;</defaultValue>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 minutes</fullName>
                </value>
                <value>
                    <fullName>15 minutes</fullName>
                </value>
                <value>
                    <fullName>30 minutes</fullName>
                </value>
                <value>
                    <fullName>45 minutes</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>1.5 hours</fullName>
                </value>
                <value>
                    <fullName>2 hours</fullName>
                </value>
                <value>
                    <fullName>2.5 hours</fullName>
                </value>
                <value>
                    <fullName>3 hours</fullName>
                </value>
                <value>
                    <fullName>3.5 hours</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>4.5 hours</fullName>
                </value>
                <value>
                    <fullName>5 hours</fullName>
                </value>
                <value>
                    <fullName>5.5 hours</fullName>
                </value>
                <value>
                    <fullName>6 hours</fullName>
                </value>
                <value>
                    <fullName>6.5 hours</fullName>
                </value>
                <value>
                    <fullName>7 hours</fullName>
                </value>
                <value>
                    <fullName>7.5 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Case_Owner_Email__c</fullName>
        <description>created as part of DBSFCRM - 93</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of DBSFCRM-93</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Chg_Policies_Procedure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain AML policy/procedure changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Status__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Not Executed</fullName>
                </value>
                <value>
                    <fullName>Follow Up Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Follow Up Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Goal Met</fullName>
                </value>
                <value>
                    <fullName>Goal Not Met</fullName>
                </value>
                <value>
                    <fullName>Message Left</fullName>
                </value>
                <value>
                    <fullName>No Answer, No Message Left</fullName>
                </value>
                <value>
                    <fullName>Wrong Number on File</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Contact_Type__c</fullName>
        <description>Created as part of DBSFCRM-464</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Sponsored Event</fullName>
                </value>
                <value>
                    <fullName>COI/Referral</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>Bank At Work</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Controlling_party_pooled_investments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Controlling party on pooled investments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Credit_Needs_Not_Being_Met_By_Bank__c</fullName>
        <label>Credit needs not being met by the bank?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Current_Wintrust_Customer__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Current Wintrust Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_CustBulk_Cash_ShipSer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk cash shipment services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Customer_Uses_Product__c</fullName>
        <description>Created as part of 155</description>
        <label>Customer Uses Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Deposit_Brokers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Deposit Brokers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Direction__c</fullName>
        <defaultValue>&quot;Outbound&quot;</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Entertaining__c</fullName>
        <description>Created as part of  155</description>
        <label>Entertaining</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_If_Yes_Where_Can_We_Be_More_Helpful__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, where can we be more helpful?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Intend_to_trade_MRB_Marijuana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intend to trade MRB (Marijuana)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Internal_Planning_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Planning Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Internet_Gambling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Internet Gambling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Likelihood_of_Moving_to_Wintrust__c</fullName>
        <description>Created as part of 155</description>
        <label>Likelihood of Moving to Wintrust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Somewhat</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Great</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MSD_MDM_Record_ID__c</fullName>
        <description>Added for capture the MDM+!+MDM id as unique for data load</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD MDM Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Mapped_from_Outlook__c</fullName>
        <description>Created for DBSFCRM-155</description>
        <label>Mapped from Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Marketing_Missing_Areas_Of_Community__c</fullName>
        <label>Marketing missing areas of community?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Meet_With_SR_Leadership__c</fullName>
        <description>Created as  part of 155</description>
        <label>Meet With SR Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ED Wehmer</fullName>
                </value>
                <value>
                    <fullName>Paul Carlisle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Next_Follow_Up_Date__c</fullName>
        <description>Created as part of 155</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Number_Clients__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Number of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_Employees__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Occupation_Function_Person_Group__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupation/Function of Person/Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Onboard_InvestMng__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Onboard Investors/Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Optional_Attendees__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Optional Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Organizer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Outcome_Notes__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome Notes**</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Override_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-139</description>
        <label>Override DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_Plan_to_invest_in_what_industries__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan to invest in what industries?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Precious_Metal_Dealers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Precious Metal Dealers (PMDs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Private_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Banking (def by US Patriot Act)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Product_Partner_Joint_Call__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Product Partner Joint Call?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABL</fullName>
                </value>
                <value>
                    <fullName>Agricultural Lending</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Banking</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Government Funds</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>Professional Practice Group</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Support Role</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Syndication/Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
                <value>
                    <fullName>Wealth - Chicago Trust</fullName>
                </value>
                <value>
                    <fullName>Wealth - Corporate Plan Services</fullName>
                </value>
                <value>
                    <fullName>Wealth - Great Lakes Advisors</fullName>
                </value>
                <value>
                    <fullName>Wealth - Wintrust Investments</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Wintrust Receivables Finance</fullName>
                </value>
                <value>
                    <fullName>Private Client Group</fullName>
                </value>
                <value>
                    <fullName>Wealth Services</fullName>
                </value>
                <value>
                    <fullName>Wealth – Corporate Plan Services</fullName>
                    <isActive>false</isActive>
                    <label>Wealth – Corporate Plan Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Product_Partner__c</fullName>
        <description>Created as part of 155</description>
        <label>Product Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Recommended_Follow_Up__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommended Follow-up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Regarding__c</fullName>
        <description>.</description>
        <label>Regarding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yet To Receive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Relationship_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Residence_Location__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Residence Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Retail_Call_Type__c</fullName>
        <label>Retail Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Call</fullName>
                </value>
                <value>
                    <fullName>Maturing CD</fullName>
                </value>
                <value>
                    <fullName>OD Call</fullName>
                </value>
                <value>
                    <fullName>OnBoarding Call</fullName>
                </value>
                <value>
                    <fullName>Past Due Loan</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Service Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Review_Type__c</fullName>
        <description>Created as part of 155</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <isActive>false</isActive>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of DBFSCRM- 93</description>
        <label>Send Email ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Shell_Comp_IntlPrivateInvestComp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shell &amp; Intl private investment company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_TM_Activity_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TM Activity</label>
        <referenceTo>WT_Activity_Extension__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Talking_Points__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Talking Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_TaskSubtype__c</fullName>
        <description>Created as a part of DBSFCRM-464.</description>
        <label>Task Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Task_Number__c</fullName>
        <description>Created as part of story 93</description>
        <displayFormat>{000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>WT_ThirdParty_Payment_Processors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Third Party Payment Processors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Third_Party_Payment_Processors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-464</description>
        <label>Third Party Payment Processors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Training__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Trends__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Update_intr_rec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated SOC1/SSAE16 report (get copy)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Attendees__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Are_Major_Bank_Related_Needs__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What are the major bank related needs?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Was_Discussed__c</fullName>
        <description>Created as a part of DBSFCRM-464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What was discussed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>